--- a/about.html
+++ b/about.html
@@ -43,6 +43,11 @@ Many friends have asked for the ability to download all the books in this librar
        <td><center><b>Date</b></center></td>
 </tr>
 <tr>
+       <td>1.12.0</td>
+       <td>Addition of <i>Bahá'í Prayers</i></td>
+       <td>February 2022</td>
+</tr>
+<tr>
        <td>1.11.3</td>
        <td>Addition of the Covenant Library Bahá'í Dates Calendar</td>
        <td>July 2021</td>
@@ -114,7 +119,7 @@ Many friends have asked for the ability to download all the books in this librar
 </tr>
 <tr>
        <td>1.0.1</td>
-       <td>Various corrections to the four volumes of Adib Taherzadeh's <i>The Revelation Of Baha'u'llah</i></td>
+       <td>Various corrections to the four volumes of <i>The Revelation Of Baha'u'llah</i></td>
        <td>October 2006</td>
 </tr>
 <tr>
