--- a/index.html
+++ b/index.html
@@ -16,66 +16,87 @@
 <table border="0"  width="95%">
 
 <tr>
-       <td><h3><b><i>Bahá'u'lláh</i></b></h3></td>
-       <td><h3><b><i>'Abdu'l-Bahá</i></b></h3></td>
+	<td><h3><b><i>Bahá'u'lláh</i></b></h3></td>
+	<td><h3><b><i>'Abdu'l-Bahá</i></b></h3></td>
 
 </tr>
 <tr>
-	   <td valign='top'>
-	   	   <h4>
-	   	   <ul type=disc>
-		   	   <li><a href="Baha'i/Baha/EW/Cover.html">Epistle to the Son of the Wolf</a></li>
-   		   	   <li><a href="Baha'i/Baha/GL/Cover.html">Gleanings From The Writings Of Bahá'u'lláh</a></li>
-		   	   <li><a href="Baha'i/Baha/HiddenWords.html">The Hidden Words of Bahá'u'lláh</a></li>
-		   	   <li><a href="Baha'i/Baha/KA/Cover.html">The Kitáb-i-Aqdas</a></li>			   
-		   	   <li><a href="Baha'i/Baha/KI/Cover.html">The Kitáb-i-Íqán</a></li>
-		   	   <li><a href="Baha'i/Baha/PM/Cover.html">Prayers and Meditations</a></li>
-   		   	   <li><a href="Baha'i/Baha/TSVATFV.html">The Seven Valleys and The Four Valleys</a></li>
-		   	   <li><a href="Baha'i/Baha/TOB/Cover.html">Tablets of Bahá'u'lláh</a></li>
-		   </ul>
-		   </h4>
-	   </td>
+	<td valign='top'>
+		<h4>
+			<ul type=disc>
+				<li><a href="Baha'i/Baha/EW/Cover.html">Epistle to the Son of the Wolf</a></li>
+				<li><a href="Baha'i/Baha/GL/Cover.html">Gleanings From The Writings Of Bahá'u'lláh</a></li>
+				<li><a href="Baha'i/Baha/HiddenWords.html">The Hidden Words of Bahá'u'lláh</a></li>
+				<li><a href="Baha'i/Baha/KA/Cover.html">The Kitáb-i-Aqdas</a></li>			   
+				<li><a href="Baha'i/Baha/KI/Cover.html">The Kitáb-i-Íqán</a></li>
+				<li><a href="Baha'i/Baha/PM/Cover.html">Prayers and Meditations</a></li>
+				<li><a href="Baha'i/Baha/TSVATFV.html">The Seven Valleys and The Four Valleys</a></li>
+				<li><a href="Baha'i/Baha/TOB/Cover.html">Tablets of Bahá'u'lláh</a></li>
+			</ul>
+		</h4>
+	</td>
 	   
-       <td valign='top' style="float:none;">
-	   	   <h4>
-	   	   <ul type=disc>
-		   	   <li><h4><a href="Baha'i/AB/SAQ/Cover.html">Some Answered Questions</a></h4></li>
-		   </ul>
-		   </h4>
+	<td valign='top'>
+		<h4>
+			<ul type=disc>
+				<li><h4><a href="Baha'i/AB/SAQ/Cover.html">Some Answered Questions</a></h4></li>
+			</ul>
 			
-		   <br><br><br>
+		<br><br><br>
 			
-		   <h3><b><i>Shoghi Effendi</i></b></h3>
-	   	   <h4>
-	   	   <ul type=disc>
-		   	   <li><h4><a href="Baha'i/SE/GPB/Cover.html">God Passes By</a></h4></li>
-		   </ul>
-		   </h4>
-	   </td>
+			<h3><b><i>Shoghi Effendi</i></b></h3>
+				<ul type=disc>
+					<li><h4><a href="Baha'i/SE/GPB/Cover.html">God Passes By</a></h4></li>
+				</ul>
+			</h4>
+		</td>
 </tr>
+
+<tr><td>&nbsp;<p>&nbsp;</td><td></td></tr>
+
+<tr>
+       <td><h3><b>Others</b></h3></td>
+       <td><h3><b>Compilations</b></h3></td>
+
+</tr>
+
+<tr>
+	<td>
+		<blockquote>
+			<h4>
+			Nabíl-i-A'zam
+				<ul type=disc>
+					<li><a href="Baha'i/Others/DBNN/Cover.html">The Dawn-Breakers, Nabíl's Narrative</a></li>
+				</ul>
+			<p>
+			Adib Taherzadeh: The Revelation of Bahá'u'lláh
+				<ul type=disc>
+					<li><a href="Baha'i/Others/ROB/V1/Cover.html">Volume 1: Baghdad 1853-63</a></li>
+					<li><a href="Baha'i/Others/ROB/V2/Cover.html">Volume 2: Adrianople 1863-68</a></li>
+					<li><a href="Baha'i/Others/ROB/V3/Cover.html">Volume 3: Akka, The Early Years 1868-77</a></li>
+					<li><a href="Baha'i/Others/ROB/V4/Cover.html">Volume 4: Mazra'ih & Bahjí 1877-92</a></li>
+				</ul>
+			</h4>
+		</blockquote>
+	</td>
+	
+	 <td valign='top'>
+	
+		<h4>
+
+		<ul type=disc>
+			<li><a href="Baha'i/Comp/BP/Cover.html">Bahá'í Prayers</a></li>
+		</ul>
+
+		</h4>
+
+	</td>
+</tr>
+
+
 </table>
 
 <br>
-
-<h3><b><i>Others</i></b></h3>
-     <blockquote  style="float:none;">
-	 	  <h4>Nabíl-i-A'zam
-		  <ul type=disc>
-		       <li><a href="Baha'i/Others/DBNN/Cover.html">The Dawn-Breakers, Nabíl's Narrative</a></li>
-   		  </ul>
-
-		  <p>
-	 
-          Adib Taherzadeh: The Revelation of Bahá'u'lláh
-	   	  <ul type=disc>
-		       <li><a href="Baha'i/Others/ROB/V1/Cover.html">Volume 1: Baghdad 1853-63</a></li>
-   		   	   <li><a href="Baha'i/Others/ROB/V2/Cover.html">Volume 2: Adrianople 1863-68</a></li>
-   		   	   <li><a href="Baha'i/Others/ROB/V3/Cover.html">Volume 3: Akka, The Early Years 1868-77</a></li>
-   		   	   <li><a href="Baha'i/Others/ROB/V4/Cover.html">Volume 4: Mazra'ih & Bahjí 1877-92</a></li>
-   		  </ul>
-		  </h4>
-     </blockquote>
-
 
 <br>
 
@@ -91,7 +112,7 @@
 
 <h4><a href="about.html">About</a></h4>
 
-<small><p><i>The Covenant Library, version 1.11.3.<br>
+<small><p><i>The Covenant Library, version 1.12.0.<br>
 Best viewed with desktop versions of Firefox or Chrome browsers</i>
 </div>
 <p>
