--- a/Baha'i/Comp/BP/AdditionalPrayers.html
+++ b/Baha'i/Comp/BP/AdditionalPrayers.html
@@ -123,7 +123,7 @@
 </tr>
 <tr>
 	<td><a name="para7"></a>
-	Pure and sanctified art Thou, O my God! How can the pen move and the ink flow after the breezes of loving-kindness have ceased, and the signs of bounty have vanished, when the sun of abasement hath risen, and the swords of calamity are drawn, when the heavens of sorrow have been upraised, and the darts of affliction and the lances of vengeance have rained from the clouds of power —in such wise that the signs of joy have departed from all hearts, and the tokens of gladness have been erased from every horizon, the gates of hope have been shut, the mercy of the supernal breeze hath ceased to waft over the rose-garden of faithfulness, and the whirlwind of extinction hath struck the tree of existence. The pen is groaning, and the ink bewaileth its plight, and the tablet is awestruck at this cry. The mind is in turmoil from the taste of this pain and sorrow, and the divine Nightingale calleth: "Alas! Alas! for all that hath been made to appear". And this, O my God, is from naught but Thy hidden bounties.
+	Pure and sanctified art Thou, O my God! How can the pen move and the ink flow after the breezes of loving-kindness have ceased, and the signs of bounty have vanished, when the sun of abasement hath risen, and the swords of calamity are drawn, when the heavens of sorrow have been upraised, and the darts of affliction and the lances of vengeance have rained from the clouds of power-—in such wise that the signs of joy have departed from all hearts, and the tokens of gladness have been erased from every horizon, the gates of hope have been shut, the mercy of the supernal breeze hath ceased to waft over the rose-garden of faithfulness, and the whirlwind of extinction hath struck the tree of existence. The pen is groaning, and the ink bewaileth its plight, and the tablet is awestruck at this cry. The mind is in turmoil from the taste of this pain and sorrow, and the divine Nightingale calleth: "Alas! Alas! for all that hath been made to appear". And this, O my God, is from naught but Thy hidden bounties.
 	<div align="right"><i>-Bahá'u'lláh</i></div>
 	</td>
 	<td VALIGN=top><small>
@@ -215,7 +215,7 @@
 </tr>
 <tr>
 	<td><a name="para14"></a>
-	I beseech Thee, O Thou the Lord of the kingdom of names and Fashioner of earth and heaven, by the rustling of the Divine Lote-Tree and by Thy most sweet utterance which hath enraptured the realities of all created things, to raise me up in Thy Name amidst Thy servants.  I am he who hath sought in the daytime and in the night season to stand before the door of Thy bounty and to present himself before the throne of Thy justice. O Lord! Cast not away him who hath clung to the cord of Thy nearness, and deprive not him who hath directed his steps towards Thy most sublime station, the summit of glory, and the supreme objective—that station wherein every atom crieth out in the most eloquent tongue, saying: "Earth and heaven, glory and dominion are God's, the Almighty, the All-Glorious, the Most Bountiful!"
+	I beseech Thee, O Thou the Lord of the kingdom of names and Fashioner of earth and heaven, by the rustling of the Divine Lote-Tree and by Thy most sweet utterance which hath enraptured the realities of all created things, to raise me up in Thy Name amidst Thy servants.  I am he who hath sought in the daytime and in the night season to stand before the door of Thy bounty and to present himself before the throne of Thy justice. O Lord! Cast not away him who hath clung to the cord of Thy nearness, and deprive not him who hath directed his steps towards Thy most sublime station, the summit of glory, and the supreme objective—-that station wherein every atom crieth out in the most eloquent tongue, saying: "Earth and heaven, glory and dominion are God's, the Almighty, the All-Glorious, the Most Bountiful!"
 	<div align="right"><i>-Bahá'u'lláh</i></div>
 	</td>
 	<td VALIGN=top><small>
@@ -1304,7 +1304,7 @@
 </tr>
 <tr>
 	<td><a name="para95"></a>
-	Praise be unto Thee, O my Lord, O my Lord! I cry unto Thee from within the depths of my heart, within mine inmost being, the reality of mine essence, the very core of my life. I call Thee to mind from mine outward and mine inward self, from out my very bones and flesh and blood, from my soul and heart and tongue and pen—aflame with the fire of my love for Thy chosen ones, frenzied with yearning over Thy greatly favoured ones, those who have cast away their lives upon Thy pathway and given up their own selves for love of Thee, and their own blood for desire of Thee. They are the ones who have made themselves the arrow’s target, who have found sweet the lance-head’s biting steel, who craved that, for the upraising of Thy Word, their heads be raised upon the spear-point, and that their hearts be torn apart—out of adoration for Thy beauty, and yearning for Thy presence, and longing for Thy love, and in ardently seeking to extol Thy glory, to be drawn unto Thy heaven, and to be drowned in the sea of devotion unto Thee.
+	Praise be unto Thee, O my Lord, O my Lord! I cry unto Thee from within the depths of my heart, within mine inmost being, the reality of mine essence, the very core of my life. I call Thee to mind from mine outward and mine inward self, from out my very bones and flesh and blood, from my soul and heart and tongue and pen—-aflame with the fire of my love for Thy chosen ones, frenzied with yearning over Thy greatly favoured ones, those who have cast away their lives upon Thy pathway and given up their own selves for love of Thee, and their own blood for desire of Thee. They are the ones who have made themselves the arrow’s target, who have found sweet the lance-head’s biting steel, who craved that, for the upraising of Thy Word, their heads be raised upon the spear-point, and that their hearts be torn apart—-out of adoration for Thy beauty, and yearning for Thy presence, and longing for Thy love, and in ardently seeking to extol Thy glory, to be drawn unto Thy heaven, and to be drowned in the sea of devotion unto Thee.
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
@@ -1332,7 +1332,7 @@
 </tr>
 <tr>
 	<td><a name="para98"></a>
-	Then they set his head on the point of their tyrant’s lance, and they carried it to his tender-hearted and grievously wronged mother and to his honourable, his sorrowing bride. And to terrify their hearts and threaten them with more—so as to make them waver in their faith and cause their feet to stumble on Thy highway of truth, Thy path that runneth straight—they flung it into the courtyard of their spacious home.
+	Then they set his head on the point of their tyrant’s lance, and they carried it to his tender-hearted and grievously wronged mother and to his honourable, his sorrowing bride. And to terrify their hearts and threaten them with more—-so as to make them waver in their faith and cause their feet to stumble on Thy highway of truth, Thy path that runneth straight—-they flung it into the courtyard of their spacious home.
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
