--- a/Baha'i/Comp/BP/p207-268Occasional.html
+++ b/Baha'i/Comp/BP/p207-268Occasional.html
@@ -2505,7 +2505,7 @@
 </tr>
 <tr>
 	<td><a name="para216.1"></a>
-	This is, O my God, the first of the days on which Thou hast bidden Thy loved ones to observe the Fast. I ask of Thee by Thy Self and by him who hath fasted out of love for Thee and for Thy good-pleasure-and not out of self and desire, nor out of fear of Thy wrath-and by Thy most excellent names and august attributes, to purify Thy servants from the love of aught except Thee and to draw them nigh unto the Dawning-Place of the lights of Thy countenance and the Seat of the throne of Thy oneness. Illumine their hearts, O my God, with the light of Thy knowledge and brighten their faces with the rays of the Daystar that shineth from the horizon of Thy Will. Potent art Thou to do what pleaseth Thee. No God is there but Thee, the All-Glorious, Whose help is implored by all men. 
+	This is, O my God, the first of the days on which Thou hast bidden Thy loved ones to observe the Fast. I ask of Thee by Thy Self and by him who hath fasted out of love for Thee and for Thy good-pleasure--and not out of self and desire, nor out of fear of Thy wrath--and by Thy most excellent names and august attributes, to purify Thy servants from the love of aught except Thee and to draw them nigh unto the Dawning-Place of the lights of Thy countenance and the Seat of the throne of Thy oneness. Illumine their hearts, O my God, with the light of Thy knowledge and brighten their faces with the rays of the Daystar that shineth from the horizon of Thy Will. Potent art Thou to do what pleaseth Thee. No God is there but Thee, the All-Glorious, Whose help is implored by all men. 
 	</td>
 	<td VALIGN=top><small>
 	<hr>
@@ -2738,7 +2738,7 @@
 </tr>
 <tr>
 	<td><a name="para237"></a>
-	Lauded be Thy name, O my God! This is the hour when Thou hast unlocked the doors of Thy bounty before the faces of Thy creatures, and opened wide the portals of Thy tender mercy unto all the dwellers of Thine earth. I beseech Thee, by all them whose blood was shed in Thy path, who, in their yearning over Thee, rid themselves from all attachment to any of Thy creatures, and who were so carried away by the sweet savors of Thine inspiration that every single member of their bodies intoned Thy praise and vibrated to Thy remembrance, not to withhold from us the things Thou hast irrevocably ordained in this Revelation-a Revelation the potency of which hath caused every tree to cry out what the Burning Bush had aforetime proclaimed unto Moses, Who conversed with Thee, a Revelation that hath enabled every least pebble to resound again with Thy praise, as the stones glorified Thee in the days of Muhammad, Thy Friend. 
+	Lauded be Thy name, O my God! This is the hour when Thou hast unlocked the doors of Thy bounty before the faces of Thy creatures, and opened wide the portals of Thy tender mercy unto all the dwellers of Thine earth. I beseech Thee, by all them whose blood was shed in Thy path, who, in their yearning over Thee, rid themselves from all attachment to any of Thy creatures, and who were so carried away by the sweet savors of Thine inspiration that every single member of their bodies intoned Thy praise and vibrated to Thy remembrance, not to withhold from us the things Thou hast irrevocably ordained in this Revelation--a Revelation the potency of which hath caused every tree to cry out what the Burning Bush had aforetime proclaimed unto Moses, Who conversed with Thee, a Revelation that hath enabled every least pebble to resound again with Thy praise, as the stones glorified Thee in the days of Muhammad, Thy Friend. 
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
@@ -2765,7 +2765,7 @@
 </tr>
 <tr>
 	<td><a name="para240"></a>
-	Rain down, then, upon us, O my God, that which beseemeth Thy grace and befitteth Thy bounty. Enable us, then, O my God, to live in remembrance of Thee and to die in love of Thee, and supply us with the gift of Thy presence in Thy worlds hereafter-worlds which are inscrutable to all except Thee. Thou art our Lord and the Lord of all worlds, and the God of all that are in heaven and all that are on earth. 
+	Rain down, then, upon us, O my God, that which beseemeth Thy grace and befitteth Thy bounty. Enable us, then, O my God, to live in remembrance of Thee and to die in love of Thee, and supply us with the gift of Thy presence in Thy worlds hereafter--worlds which are inscrutable to all except Thee. Thou art our Lord and the Lord of all worlds, and the God of all that are in heaven and all that are on earth. 
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
@@ -2907,7 +2907,7 @@
 </tr>
 <tr>
 	<td><a name="para255"></a>
-	Magnify Thou, moreover, such as have believed in Him and in His signs and have turned towards Him, from among those that have acknowledged Thy unity in His Latter Manifestation-a Manifestation whereof He hath made mention in His Tablets, and in His Books, and in His Scriptures, and in all the wondrous verses and gem-like utterances that have descended upon Him. It is this same Manifestation Whose covenant Thou hast bidden Him establish ere He had established His own covenant. He it is Whose praise the Bayán hath celebrated. In it His excellence hath been extolled, and His truth established, and His sovereignty proclaimed, and His Cause perfected. Blessed is the man that hath turned unto Him, and fulfilled the things He hath commanded, O Thou Who art the Lord of the worlds and the Desire of all them that have known Thee! 
+	Magnify Thou, moreover, such as have believed in Him and in His signs and have turned towards Him, from among those that have acknowledged Thy unity in His Latter Manifestation--a Manifestation whereof He hath made mention in His Tablets, and in His Books, and in His Scriptures, and in all the wondrous verses and gem-like utterances that have descended upon Him. It is this same Manifestation Whose covenant Thou hast bidden Him establish ere He had established His own covenant. He it is Whose praise the Bayán hath celebrated. In it His excellence hath been extolled, and His truth established, and His sovereignty proclaimed, and His Cause perfected. Blessed is the man that hath turned unto Him, and fulfilled the things He hath commanded, O Thou Who art the Lord of the worlds and the Desire of all them that have known Thee! 
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
