--- a/Baha'i/Comp/BP/p017-206General.html
+++ b/Baha'i/Comp/BP/p017-206General.html
@@ -854,7 +854,7 @@
 </tr>
 <tr>
 	<td><a name="para63.3"></a>
-	O Thou kind Lord! Grant that this youth may attain unto that which is the highest aspiration of the holy ones. Endow him with the wings of Thy strengthening grace-wings of detachment and divine aid-that he may soar thereby into the atmosphere of Thy tender mercy, be able to partake of Thy celestial bestowals, may become a sign of divine guidance and a standard of the Concourse on high. Thou art the Potent, the Powerful, the Seeing, the Hearing.
+	O Thou kind Lord! Grant that this youth may attain unto that which is the highest aspiration of the holy ones. Endow him with the wings of Thy strengthening grace--wings of detachment and divine aid--that he may soar thereby into the atmosphere of Thy tender mercy, be able to partake of Thy celestial bestowals, may become a sign of divine guidance and a standard of the Concourse on high. Thou art the Potent, the Powerful, the Seeing, the Hearing.
 	<div align="right"><i>-'Abdu'l-Bahá</i></div> 
 	</td>
 	<td VALIGN=top><small>
@@ -1693,7 +1693,7 @@
 </tr>
 <tr>
 	<td><a name="para63.73"></a>
-	Man's life has its springtime and is endowed with marvellous glory. The period of youth is characterized by strength and vigour and stands out as the choicest time in human life. Therefore you should strive day and night so that endowed with heavenly strength, inspired with brilliant motives and aided by His celestial power and heavenly grace and confirmation, you may become the ornaments of the world of humanity, and pre-eminent among those who are initiated into true learning and the love of God. You must be distinguished amidst men by your sanctity and detachment, loftiness of purpose, magnanimity, determination, noble-mindedness, tenacity, the elevation of your aims and your spiritual qualities; that you may become the means of exaltation and glory for the Cause of God and the dawning-places of His heavenly bestowals; that you may conduct yourselves in conformity with the counsels and exhortations of the Blessed Beauty-may my life be offered up for His loved ones-and by reflecting Bahá'í qualities and attributes, you may stand out distinguished from others. 'Abdu'l-Bahá eagerly anticipates that each one of you may become even as a fearless lion moving in the pastures of human perfection and a musk-laden breeze wafting over the meads of virtue.
+	Man's life has its springtime and is endowed with marvellous glory. The period of youth is characterized by strength and vigour and stands out as the choicest time in human life. Therefore you should strive day and night so that endowed with heavenly strength, inspired with brilliant motives and aided by His celestial power and heavenly grace and confirmation, you may become the ornaments of the world of humanity, and pre-eminent among those who are initiated into true learning and the love of God. You must be distinguished amidst men by your sanctity and detachment, loftiness of purpose, magnanimity, determination, noble-mindedness, tenacity, the elevation of your aims and your spiritual qualities; that you may become the means of exaltation and glory for the Cause of God and the dawning-places of His heavenly bestowals; that you may conduct yourselves in conformity with the counsels and exhortations of the Blessed Beauty--may my life be offered up for His loved ones--and by reflecting Bahá'í qualities and attributes, you may stand out distinguished from others. 'Abdu'l-Bahá eagerly anticipates that each one of you may become even as a fearless lion moving in the pastures of human perfection and a musk-laden breeze wafting over the meads of virtue.
 	</td>
 	<td VALIGN=top><small>
 	<hr>
@@ -2695,7 +2695,7 @@
 </tr>
 <tr>
 	<td><a name="para146"></a>
-	Bless me, O my God, and those who will believe in Thy signs on the appointed Day, and such as cherish my love in their hearts-a love which Thou dost instill into them. Verily, Thou art the Lord of righteousness, the Most Exalted. 
+	Bless me, O my God, and those who will believe in Thy signs on the appointed Day, and such as cherish my love in their hearts--a love which Thou dost instill into them. Verily, Thou art the Lord of righteousness, the Most Exalted. 
 	<div align="right"><i>-The Báb</i></div>
 	</td>
 	<td VALIGN=top><small>
@@ -2917,7 +2917,7 @@
 </tr>
 <tr>
 	<td><a name="para165"></a>
-	Make firm our steps, O Lord, in Thy path and strengthen Thou our hearts in Thine obedience. Turn our faces toward the beauty of Thy oneness, and gladden our bosoms with the signs of Thy divine unity. Adorn our bodies with the robe of Thy bounty, and remove from our eyes the veil of sinfulness, and give us the chalice of Thy grace; that the essence of all beings may sing Thy praise before the vision of Thy grandeur. Reveal then Thyself, O Lord, by Thy merciful utterance and the mystery of Thy divine being, that the holy ecstasy of prayer may fill our souls-a prayer that shall rise above words and letters and transcend the murmur of syllables and sounds-that all things may be merged into nothingness before the revelation of Thy splendor. 
+	Make firm our steps, O Lord, in Thy path and strengthen Thou our hearts in Thine obedience. Turn our faces toward the beauty of Thy oneness, and gladden our bosoms with the signs of Thy divine unity. Adorn our bodies with the robe of Thy bounty, and remove from our eyes the veil of sinfulness, and give us the chalice of Thy grace; that the essence of all beings may sing Thy praise before the vision of Thy grandeur. Reveal then Thyself, O Lord, by Thy merciful utterance and the mystery of Thy divine being, that the holy ecstasy of prayer may fill our souls--a prayer that shall rise above words and letters and transcend the murmur of syllables and sounds--that all things may be merged into nothingness before the revelation of Thy splendor. 
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
@@ -3424,7 +3424,7 @@
 </tr>
 <tr>
 	<td><a name="para207"></a>
-	Glory be to Thee, O Lord my God! I implore Thee by Thy Name, through which Thou didst lift up the ensigns of Thy guidance, and didst shed the radiance of Thy loving-kindness, and didst reveal the sovereignty of Thy Lordship; through which the lamp of Thy names hath appeared within the niche of Thine attributes, and He Who is the Tabernacle of Thy unity and the Manifestation of detachment hath shone forth; through which the ways of Thy guidance were made known, and the paths of Thy good pleasure were marked out; through which the foundations of error have been made to tremble, and the signs of wickedness have been abolished; through which the fountains of wisdom have burst forth, and the heavenly table hath been sent down; through which Thou didst preserve Thy servants and didst vouchsafe Thy healing; through which Thou didst show forth Thy tender mercies unto Thy servants and revealedst Thy forgiveness amidst Thy creatures-I implore Thee to keep safe him who hath held fast and returned unto Thee, and clung to Thy mercy, and seized the hem of Thy loving providence. Send down, then, upon him Thy healing, and make him whole, and endue him with a constancy vouchsafed by Thee, and a tranquillity bestowed by Thy highness. 
+	Glory be to Thee, O Lord my God! I implore Thee by Thy Name, through which Thou didst lift up the ensigns of Thy guidance, and didst shed the radiance of Thy loving-kindness, and didst reveal the sovereignty of Thy Lordship; through which the lamp of Thy names hath appeared within the niche of Thine attributes, and He Who is the Tabernacle of Thy unity and the Manifestation of detachment hath shone forth; through which the ways of Thy guidance were made known, and the paths of Thy good pleasure were marked out; through which the foundations of error have been made to tremble, and the signs of wickedness have been abolished; through which the fountains of wisdom have burst forth, and the heavenly table hath been sent down; through which Thou didst preserve Thy servants and didst vouchsafe Thy healing; through which Thou didst show forth Thy tender mercies unto Thy servants and revealedst Thy forgiveness amidst Thy creatures--I implore Thee to keep safe him who hath held fast and returned unto Thee, and clung to Thy mercy, and seized the hem of Thy loving providence. Send down, then, upon him Thy healing, and make him whole, and endue him with a constancy vouchsafed by Thee, and a tranquillity bestowed by Thy highness. 
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
@@ -3481,7 +3481,7 @@
 </tr>
 <tr>
 	<td><a name="para212"></a>
-	Glory be to Thee, O Lord my God! I beg of Thee by Thy Name through which He Who is Thy Beauty hath been stablished upon the throne of Thy Cause, and by Thy Name through which Thou changest all things, and gatherest together all things, and callest to account all things, and rewardest all things, and preservest all things, and sustainest all things-I beg of Thee to guard this handmaiden who hath fled for refuge to Thee, and hath sought the shelter of Him in Whom Thou Thyself art manifest, and hath put her whole trust and confidence in Thee. 
+	Glory be to Thee, O Lord my God! I beg of Thee by Thy Name through which He Who is Thy Beauty hath been stablished upon the throne of Thy Cause, and by Thy Name through which Thou changest all things, and gatherest together all things, and callest to account all things, and rewardest all things, and preservest all things, and sustainest all things--I beg of Thee to guard this handmaiden who hath fled for refuge to Thee, and hath sought the shelter of Him in Whom Thou Thyself art manifest, and hath put her whole trust and confidence in Thee. 
 	</td>
 	<td VALIGN=top><small>
 	<hr>
@@ -5889,7 +5889,7 @@
 </tr>
 <tr>
 	<td><a name="para366.10"></a>
-	O God, and the God of all Names, and Maker of the heavens! I entreat Thee by Thy Name through which He Who is the Dayspring of Thy might and the Dawning-Place of Thy power hath been manifested, through which every solid thing hath been made to flow, and every dead corpse hath been quickened, and every moving spirit confirmed-I entreat Thee to enable me to rid myself of all attachment to any one but Thee, and to serve Thy Cause, and to wish what Thou didst wish through the power of Thy sovereignty, and to perform what is the good pleasure of Thy will.
+	O God, and the God of all Names, and Maker of the heavens! I entreat Thee by Thy Name through which He Who is the Dayspring of Thy might and the Dawning-Place of Thy power hath been manifested, through which every solid thing hath been made to flow, and every dead corpse hath been quickened, and every moving spirit confirmed--I entreat Thee to enable me to rid myself of all attachment to any one but Thee, and to serve Thy Cause, and to wish what Thou didst wish through the power of Thy sovereignty, and to perform what is the good pleasure of Thy will.
 	</td>
 	<td VALIGN=top><small>
 	<hr>
@@ -7396,7 +7396,7 @@
 </tr>
 <tr>
 	<td><a name="para483"></a>
-	O God! Be Thou their supporter and their helper, and in the wilderness, the mountain, the valley, the forests, the prairies and the seas, be Thou their confidant-so that they may cry out through the power of the Kingdom and the breath of the Holy Spirit. 
+	O God! Be Thou their supporter and their helper, and in the wilderness, the mountain, the valley, the forests, the prairies and the seas, be Thou their confidant--so that they may cry out through the power of the Kingdom and the breath of the Holy Spirit. 
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
@@ -7855,7 +7855,7 @@
 </tr>
 <tr>
 	<td><a name="para528"></a>
-	O God! O God! This is a broken-winged bird and his flight is very slow-assist him so that he may fly toward the apex of prosperity and salvation, wing his way with the utmost joy and happiness throughout the illimitable space, raise his melody in Thy Supreme Name in all the regions, exhilarate the ears with this call, and brighten the eyes by beholding the signs of guidance. 
+	O God! O God! This is a broken-winged bird and his flight is very slow--assist him so that he may fly toward the apex of prosperity and salvation, wing his way with the utmost joy and happiness throughout the illimitable space, raise his melody in Thy Supreme Name in all the regions, exhilarate the ears with this call, and brighten the eyes by beholding the signs of guidance. 
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
