--- a/Baha'i/Others/ROB/V1/Cover.html
+++ b/Baha'i/Others/ROB/V1/Cover.html
@@ -183,7 +183,7 @@ Vol 1
 	   </H1>
 	   <small>
 	   		  <center>
-			  		  TABLET OF THE HOLY MARINER<p>
+			  		  <a href="../../../Comp/BP/p207-268Occasional.html#para73">TABLET OF THE HOLY MARINER</a><p>
 					  Revealed by Bahá'u'lláh in Arabic<br>
 					  In the handwriting of 'Abdu'l-Bahá
 	   		  </center>
