--- a/CLUI/UnifiedIndex.html
+++ b/CLUI/UnifiedIndex.html
@@ -1381,7 +1381,7 @@ Key:<p>
 		unity of religions<a name="KIunityofreligions"></a>, {<tt>ROB1</tt>: <a href= "../Baha'i/Others/ROB/V1/p153-197Ch10.html#p160">160</a>-61}<br>
 	</blockquote>
 	written for a Muslim<a name="KIwrittenformuslim"></a>, {<tt>ROB1</tt>: <a href= "../Baha'i/Others/ROB/V1/p153-197Ch10.html#p162">162</a>}<br>
-	<i>See also</i> <a href="#GLtranslationsKI"><i>Gleanings from the Writings of Bahá'u'lláh</i></a>, <a href="#Certitude">Certitude</a>, <a href="#Detachment">Detachment</a>, <a href="#HolySpirit">Spirit/Holy</a>, <a href="#Manifestation(s)ofGod">Manifestations of God</a>, <a href="#Qá'im">Báb, The/Qá'im</a>, <a href="#TrueSeeker">True Seeker</a>
+	<i>See also</i> <a href="#Certitude">Certitude</a>, <a href="#Detachment">Detachment</a>, <a href="#HolySpirit">Spirit, Holy</a>, <a href="#Manifestation(s)ofGod">Manifestations of God</a>, <a href="#Qá'im">Báb, The/Qá'im</a>, <a href="#TrueSeeker">True Seeker</a>
 	</div>
 	</blockquote>
 <i>Lawh-i-Ahbáb</i><a name="Lawh-i-Ahbáb"></a> (Tablet of the Friends),
