--- a/Baha'i/Baha/KA/p165-251Notes.html
+++ b/Baha'i/Baha/KA/p165-251Notes.html
@@ -492,7 +492,7 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 	  <td>
 	  <b><a name="note34"/>34. Perform ye . . . ablutions for the Obligatory Prayer <a href="p019-088Aqdas.html#para18">&para;18</a></b><p>
 	  Ablutions are specifically associated with certain prayers. They must precede the offering of the three Obligatory Prayers, the daily recitation of "Alláh-u-Abhá" ninety-five times, and the recital of the verse prescribed as an alternative to obligatory prayer and fasting for women in their courses (see <a href="p165-251Notes.html#note20">note 20</a>).<p>
-	  The prescribed ablutions consist of washing the hands and the face in preparation for prayer. In the case of the medium Obligatory Prayer, this is accompanied by the <a name="p181"/> recitation of certain verses (see Some Texts Revealed by Bahá'u'lláh Supplementary to the Kitáb-i-Aqdas).<p>
+	  The prescribed ablutions consist of washing the hands and the face in preparation for prayer. In the case of the medium Obligatory Prayer, this is accompanied by the <a name="p181"/> recitation of certain verses (see <a href="p089-102Supp.html#para22">Some Texts Revealed by Bahá'u'lláh Supplementary to the Kitáb-i-Aqdas</a>).<p>
 	  That ablutions have a significance beyond washing may be seen from the fact that even should one have bathed oneself immediately before reciting the Obligatory Prayer, it would still be necessary to perform ablutions (<a href="p103-140QA.html#qa18">Q&A 18</a>).<p>
 	  When no water is available for ablutions, a prescribed verse is to be repeated five times (see <a href="p165-251Notes.html#note16">note 16</a>), and this provision is extended to those for whom the use of water would be physically harmful (<a href="p103-140QA.html#qa51">Q&A 51</a>).<p>
 	  The detailed provisions of the law concerning ablutions are set out in the Synopsis and Codification, section <a href="p141-164Synopsis.html#IV.A.10">IV.A.10.</a>a.-g., as well as in Questions and Answers numbers <a href="p103-140QA.html#qa51">51</a>, <a href="p103-140QA.html#qa62">62</a>, <a href="p103-140QA.html#qa66">66</a>, <a href="p103-140QA.html#qa77">77</a> and <a href="p103-140QA.html#qa86">86</a>.<p>
@@ -1839,7 +1839,7 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 	  </td>
 	  <td VALIGN=TOP>
 	  <small><hr>
-	  [CLUI: <a href="../../../CLUI/UnifiedIndex.html#CrimesSexualActs">Crime(s)/SexualActs</a>] 
+	  [CLUI: <a href="../../../CLUI/UnifiedIndex.html#CrimesSexualActs">Crime(s)/Sexual Acts</a>] 
 	  </small>	  
 	  </td>
 	  <td>&nbsp;</td>
@@ -2595,8 +2595,10 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 	  </td>
 	  <td VALIGN=top><small>
 	  <hr>
-	  ["source of perversion..."] <i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para167">p. 170</a><p>
-  	  [CLUI: <a href="../../../CLUI/UnifiedIndex.html#Yahyá,Mírzá">Mírzá Yahyá</a>]
+  	  [CLUI:<br>
+	   <a href="../../../CLUI/UnifiedIndex.html#Yahyá,Mírzá">Mírzá Yahyá</a>,<br>
+	  <a href="../../../CLUI/UnifiedIndex.html#Yahyá,MírzásourceofPerversion">"source of perversion"</a><br>
+	  ]
 	  </small></td>
 	  <td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">249</DIV></center><p></small></td>
 </tr>
