--- a/Baha'i/Comp/BP/AdditionalPrayers.html
+++ b/Baha'i/Comp/BP/AdditionalPrayers.html
@@ -86,7 +86,7 @@
 	<td VALIGN=top><small>
 	1. Qur’án 21:89
 	<hr>
-	Terms: childless
+	Terms: Childless
 	</small></td>
 	<td VALIGN=top></td>
 </tr>
@@ -112,7 +112,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	Terms: pangs of labour
+	Terms: Pangs of labour
 	</small></td>
 	<td VALIGN=top></td>
 </tr>
@@ -866,7 +866,6 @@
 	<td VALIGN=top><small>
 	<hr>
 	Source: <a href="https://www.bahai.org/library/authoritative-texts/abdul-baha/prayers-abdul-baha/prayers-abdul-baha-full-diacritics.docx?10b118a8">bahai.org</a> 2021<p>
-	<hr>
 	Terms: (plural)
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">A27</DIV></center><p></small></td>
@@ -1422,7 +1421,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	Source: <a href="https://www.bahai.org/library/authoritative-texts/abdul-baha/additional-prayers-revealed-abdul-baha/">bahai.org</a> 2021<p>
-	Terms: emperor George V, the King of England
+	Terms: Emperor George V, the King of England
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">A45</DIV></center><p></small></td>
 </tr>
@@ -1642,7 +1641,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	Source: <a href="https://www.bahai.org/library/authoritative-texts/abdul-baha/additional-prayers-revealed-abdul-baha/">bahai.org</a> 2021<p>
-	Terms: mother
+	Terms: Mother
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">A53</DIV></center><p></small></td>
 </tr>
