--- a/Baha'i/Comp/BP/p017-206General.html
+++ b/Baha'i/Comp/BP/p017-206General.html
@@ -560,7 +560,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	Terms: maidservant
+	Terms: Maidservant
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">33</DIV></center><p></small></td>
 </tr>
@@ -589,7 +589,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	Terms: infant
+	Terms: Infant
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -641,7 +641,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	Terms: infant
+	Terms: Infant
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">35</DIV></center><p></small></td>
 </tr>
@@ -657,7 +657,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	Terms: infant
+	Terms: Infant
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1030,7 +1030,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	Source: <a href="https://www.bahai.org/library/authoritative-texts/prayers/bahai-prayers/bahai-prayers-full-diacritics.docx?f011de12">bahai.org</a> 2021<p>
-	Terms: maidservant
+	Terms: Maidservant
 	</small></td>
 	<td VALIGN=top></td>
 </tr>
@@ -1327,7 +1327,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	Source: <a href="https://www.bahai.org/library/authoritative-texts/prayers/bahai-prayers-tablets-children/bahai-prayers-tablets-children-full-diacritics.docx?2db509ab">bahai.org</a> 2021<p>
-	Terms: daughter
+	Terms: Daughter
 	</small></td>
 	<td VALIGN=top></td>
 </tr>
@@ -1353,7 +1353,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	Source: <a href="https://www.bahai.org/library/authoritative-texts/prayers/bahai-prayers-tablets-children/bahai-prayers-tablets-children-full-diacritics.docx?2db509ab">bahai.org</a> 2021<p>
-	Terms: handmaid
+	Terms: Handmaid
 	</small></td>
 	<td VALIGN=top></td>
 </tr>
@@ -1796,7 +1796,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	Terms: handmaiden
+	Terms: Handmaiden
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -2049,7 +2049,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	Source: <a href="https://www.bahai.org/library/authoritative-texts/prayers/bahai-prayers/bahai-prayers-full-diacritics.docx?f011de12">bahai.org</a> 2021<p>
-	Terms: handmaiden	
+	Terms: Handmaiden	
 	</small></td>
 	<td VALIGN=top></td>
 </tr>
@@ -2075,7 +2075,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	Source: <a href="https://www.bahai.org/library/authoritative-texts/prayers/bahai-prayers/bahai-prayers-full-diacritics.docx?f011de12">bahai.org</a> 2021<p>
-	Terms: handmaiden	
+	Terms: Handmaiden	
 	</small></td>
 	<td VALIGN=top></td>
 </tr>
@@ -2101,7 +2101,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	Source: <a href="https://www.bahai.org/library/authoritative-texts/prayers/bahai-prayers/bahai-prayers-full-diacritics.docx?f011de12">bahai.org</a> 2021<p>
-	Terms: handmaiden	
+	Terms: Handmaiden	
 	</small></td>
 	<td VALIGN=top></td>
 </tr>
@@ -2519,7 +2519,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	Terms: handmaid
+	Terms: Handmaid
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -2755,7 +2755,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	Terms: handmaid, husband
+	Terms: Handmaid, husband
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -3485,7 +3485,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	Terms: handmaiden
+	Terms: Handmaiden
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">90</DIV></center><p></small></td>
 </tr>
@@ -3533,7 +3533,8 @@
 	</blockquote>
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	Terms: <i>Long Healing Prayer</i>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
