--- a/Baha'i/Comp/BP/p207-268Occasional.html
+++ b/Baha'i/Comp/BP/p207-268Occasional.html
@@ -60,7 +60,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	<i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../../Others/ROB/V2/p107-136Ch05.html">ch. 5</a><p>
-	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Lawh-i-Ahmad">Lawh-i-Ahmad</a>]
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Lawh-i-Ahmad"><i>Lawh-i-Ahmad</i></a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">209</DIV></center><p></small></td>
 </tr>
