--- a/Baha'i/SE/GPB/p087-234SecondPeriod.html
+++ b/Baha'i/SE/GPB/p087-234SecondPeriod.html
@@ -1695,7 +1695,7 @@ para69 Quote from Iqan "From My eyes", Iqan has "From Our eyes"
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	[The "Most Great Idol"...] <i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../../Others/ROB/V2/p291-300Ch14.html#p298">p. 298</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#MostGreatIdol">"Most Great Idol"</a>]
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
