--- a/CLUG/UnifiedGlossary.html
+++ b/CLUG/UnifiedGlossary.html
@@ -911,7 +911,7 @@ Key:<p>
 	<blockquote>
 	{<tt>KI</tt>: The first to believe in the Báb, the first 'Letter of the Living,' the 'Bábu'l-Báb'-meaning 'the Gate of the Gate,' a title given him by the Báb. Born in 1813, he was for nine years a student of Siyyid Kázim and for five a follower of the Báb. He was martyred at the fort of Shaykh Tabarsí, on February 2, 1849}
 	</blockquote>
-<b>Mullá Mihdíy-i-Khu'í</b><a name="MulláMihdíy-i-Khu'í"></a>
+<b><a href="../CLUI/UnifiedIndex.html#Mihdíy-i-Khú'í,Mullá">Mullá Mihdíy-i-Khu'í</a></b><a name="MulláMihdíy-i-Khu'í"></a>
 	<blockquote>
 	{<tt>KI</tt>: A close companion of Bahá'u'lláh and tutor to the children of His household. Martyred at Tabarsí}
 	</blockquote>
